# doto

./: .gitignore  Cargo.toml
migrations/: 20260620203951_create_todo_schema.down.sql  20260620203951_create_todo_schema.up.sql  20260620204019_add_todo_tags.down.sql  20260620204019_add_todo_tags.up.sql
src/: main.rs
src/adapters/cli/: mod.rs  use_cases.rs
src/adapters/cli/commands/todo/: add.rs  ls.rs  mod.rs  rm.rs
src/application/: errors.rs
src/application/ports/: todo_repository.rs
src/application/usecases/todos/: create_todo.rs  delete_all.rs  delete_by_id.rs  get_all_todos.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: todo.rs
src/domain/errors/: mod.rs  todo.rs
src/domain/query/: filter.rs  mod.rs  pagination.rs  sort.rs
src/domain/vo/: todo_status.rs
src/infrastructure/repositories/sqlite/: todo.rs
src/shared/: mod.rs  tabwriter.rs  utils.rs
