[package]
name = "doto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
csv = "1.4.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
